# marge

./: .gitignore  Cargo.toml  README.md  comflicts.txt  marge.toml
src/: events.rs  git.rs  main.rs  merge_candidate.rs  remote.rs
