[package]
name = "marge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "marge helps you merge your PRs"
authors = ["nig"]

[dependencies]
tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.1"
futures = "0.3"
tui = { version = "0.19.0", default-features = false, features = ["crossterm", "serde"] }
octocrab = {path  = "../octocrab"}
anyhow = "1.0.72"
url = { version = "2.2.2", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true