[package]
name = "marge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "marge helps you merge your PRs"
authors = ["nig"]

[dependencies]
tokio = { version = "1.17", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
    "signal"
] }
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.1"
futures = "0.3"
anyhow = "1.0.72"
url = { version = "2.2.2", features = ["serde"] }

crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-timer = "3.0.2"
log = "0.4.19"
tui-logger = { git = "https://github.com/ganthern/tui-logger.git", version = "0.9.3"}
ratatui = { version = "0.24.0" }
tokio-stream = { version = "0.1.14", features = ["signal"] }
octocrab = "0.32.0"

[profile.release]
opt-level = "z"
lto = true
